--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "apexcharts": "^3.19.2",
+    "apexcharts": "https://github.com/SaberMK/apexcharts.js.git",
     "ng-apexcharts": "file:projects/ng-apexcharts",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
